3-tier-architecture-with-postgres-db-with-login-page/3-tier-architecture-with-postgres-db/k8s-manifests/with-ingress/4-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: sidorea-backend-service
spec:
  type: ClusterIP
  selector:
    app: sidorea-backend
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidorea-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sidorea-backend
  template:
    metadata:
      labels:
        app: sidorea-backend
    spec:
      containers:
      - name: backend-api
        image: nagarajkamath602/sidorea-backend-3-tier:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: backend-data
          mountPath: /app/data
      volumes:
      - name: backend-data
        persistentVolumeClaim:
          claimName: sidorea-backend-pvc
